tests/e2e/function_call_only_name.error
Error: syntax error in story at line 4, column 1

4|    a.foo()
      ^

E0049: Functions can only be called by name
