tests/e2e/function_call_only_name.story
function foo returns int
    return 0

b = a.foo()
